# src/routes/index.js
@@ -6,17 +6,20 @@ const attendantController = require('../controllers/attendantController');
 const productController = require('../controllers/productController');
 const cartController = require('../controllers/cartController');
 
+
+
+router.post('/admin/register', adminController.register);
 router.post('/login/admin', adminController.login);
-router.post('/login/attendant', attendantController.login);
 
 router.use(authMiddleware);
 
 router.post('/product', productController.addProduct);
 router.put('/product/:id/price', productController.updatePrice);
-router.put('/product/:id/image', productController.updateImage);
 router.delete('/product/:id', productController.deleteProduct);
 router.get('/product/search', productController.searchProduct);
 
+
 router.post('/cart/add', cartController.addToCart);
+router.post('/cart/checkout', cartController.checkout);
 
 module.exports = router;
